[gd_scene load_steps=6 format=3 uid="uid://d16hng75dnkhk"]

[ext_resource type="Script" uid="uid://c1egt0y4p7olc" path="res://ui/behavior_editor.gd" id="1_lxsi2"]
[ext_resource type="PackedScene" uid="uid://25gbhyy7yo58" path="res://ui/behavior_editor_view.tscn" id="2_rkf2w"]
[ext_resource type="Texture2D" uid="uid://c8t68dpweqvr3" path="res://ui/icons/Remove.svg" id="3_3dxw4"]
[ext_resource type="Texture2D" uid="uid://b0vdhdrhn6cj1" path="res://ui/icons/Edit.svg" id="4_sdttf"]
[ext_resource type="Texture2D" uid="uid://dm2ewt4q25wsb" path="res://ui/icons/TripleBar.svg" id="5_r4r0k"]

[node name="BehaviorEditor" type="VBoxContainer"]
size_flags_vertical = 3
script = ExtResource("1_lxsi2")

[node name="BehaviorEditorView" parent="." instance=ExtResource("2_rkf2w")]
unique_name_in_owner = true
layout_mode = 2
delete_icon = ExtResource("3_3dxw4")
edit_icon = ExtResource("4_sdttf")
drag_icon = ExtResource("5_r4r0k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="SaveButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Save"

[node name="CancelButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="RevertButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Revert"

[connection signal="can_save_to_behavior_library_updated" from="BehaviorEditorView" to="." method="_on_behavior_editor_view_can_save_to_behavior_library_updated"]
[connection signal="can_save_to_behavior_updated" from="BehaviorEditorView" to="." method="_on_behavior_editor_view_can_save_to_behavior_updated"]
[connection signal="pressed" from="HBoxContainer/SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RevertButton" to="." method="_on_revert_button_pressed"]
